ingress/main/api/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rate-limit-api
  namespace: mlops
spec:
  rateLimit:
    average: 20
    burst: 50
