ingress/main/api/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: serving
  namespace: mlops
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.alexshishin.ru`)
      kind: Rule
      services:
        - name: serving
          port: 8000
      middlewares:
        - name: rate-limit-api
  tls:
    secretName: api-tls-secret
